--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
       "command": "cmake",
       "args": [
         "--build",
-        "${workspaceFolder}/out/build/debug",
+        "${workspaceFolder}/out/debug",
         "--config",
         "Debug"
       ],
@@ -28,11 +28,14 @@
       "command": "cmake",
       "args": [
         "--build",
-        "${workspaceFolder}/out/build/release",
+        "${workspaceFolder}/out/release",
         "--config",
         "Release"
       ],
-      "group": "build",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "presentation": {
         "echo": true,
         "reveal": "always",
@@ -49,7 +52,7 @@
       "command": "cmake",
       "args": [
         "--build",
-        "${workspaceFolder}/out/build/testing",
+        "${workspaceFolder}/out/testing",
         "--config",
         "RelWithDebInfo"
       ],
